# della_wonders

./: .gitignore  LICENSE  MIGRATION.md  README.md  design_outline.md  minimal_test.py  pixi.toml  pyproject.toml  recipe.yaml  slurm_wonders.sh  upload_conda.sh
della_wonders/: __init__.py  cli.py  orchestrator.py  processor.py  proxy.py  security.py
legacy/: della_wonders.py  proxy.py  wonder_della.py
slurm/: README.md  config.env  slurm_start_wonders_conda  start_wonders.slurm  submit_wonders.sh
slurm/examples/: long_production.env  short_test.env
test/: comps_test.py  simple_test.py  test_script.py
