[project]
name = "della-wonders"
version = "1.1.0"
description = "Store-and-forward HTTP proxy for airgapped environments"
authors = [
    {name = "Della Wonders Team", email = "dev@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.1.0",
    "requests>=2.31.0",
]
keywords = ["proxy", "airgap", "security", "http"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/professorwug/della_wonders"
Repository = "https://github.com/professorwug/della_wonders"
Issues = "https://github.com/professorwug/della_wonders/issues"

[project.scripts]
wonder_run = "della_wonders.cli:wonder_run"
start_wonders = "della_wonders.cli:start_wonders"
wonder_status = "della_wonders.cli:wonder_status"
wonder_bread = "della_wonders.cli:wonder_bread"
wonders_version = "della_wonders.cli:wonders_version"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]


[tool.pixi.dependencies]
python = ">=3.11"
mitmproxy = ">=10.1.0"
requests = ">=2.31.0"
pip = "*"
python-dotenv = ">=1.1.1,<2"
python-dateutil = ">=2.9.0.post0,<3"

[tool.pixi.pypi-dependencies]
della-wonders = { path = ".", editable = true }

# Configure for pixi build - requires build recipe configuration

[tool.pixi.tasks]
install = "pip install -e ."
test-install = "pip install -e . && wonder_run --help"
test-commands = "wonder_run --help && start_wonders --help && wonder_status --help"
run-test = "wonder_run test_script.py"
build = "pixi build"
